--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>A whale of a greeting to</title>
 	</head>
 	<body>
 		<h1>hello world</h1>
 		<p>call me ishmael</p>
 	</body>
 </html>
-	
